博客内容调整，简化。

--- a/index.html
+++ b/index.html
@@ -34,16 +34,15 @@
       </section>
     </div>
 
-    <div id="blogroll" class="blogroll inner">
-        <ul>
-            <li><a href="http://gafish.github.io/">徐辉的blog</a></li>
-            <!--<li><a href="javascript:;">景辉</a></li>-->
-        </ul>
-    </div>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+          <h3>友情链接</h3>
+          <ul>
+              <li><a href="http://gafish.github.io/">徐辉的blog</a></li>
+              <li><a href="https://github.com/v10258">景辉的github</a></li>
+              <!--<li><a href="javascript:;">景辉</a></li>-->
+          </ul>
       </footer>
     </div>
 
