--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@ title: 我的Blog
 <h2>{{ page.title }}</h2>
 <p>最新文章</p>
 <ul>
-  {% for post in site.posts %}
+  <!--{% for post in site.posts %}
     <li>{{ post.date | date_to_string }}
       <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
     </li>
-  {% endfor %}
+  {% endfor %}-->
+
+    <li><a href="javascript:;"></a></li>
 </ul>
 
 {% include footer.html param="footer" %}
+
