--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: 我的Blog
     </li>
   {% endfor %}-->
 
-    <li><a href="javascript:;"></a></li>
+    <li><a href="javascript:;">change</a></li>
 </ul>
 
 {% include footer.html param="footer" %}
