--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@ title: 我的Blog
       <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
     </li>
   {% endfor %}-->
-
-    <li><a href="javascript:;">change</a></li>
 </ul>
+<div><a href="./demo">change</a></div>
 
 {% include footer.html param="footer" %}
 
