--- a/demo/index.html
+++ b/demo/index.html
@@ -70,7 +70,7 @@
       $('#button').on('click', function () {
         html2canvas(document.querySelector("#map"),{
             useCORS : true,
-            allowTaint :false
+            allowTaint :true
         })
         .then(canvas => {
           document.body.appendChild(canvas)
