--- a/demo/index.html
+++ b/demo/index.html
@@ -60,7 +60,7 @@
 
   <div id="docs"></div>
 
-  <button type="button" id="button">button</button>
+  <button type="button" id="button">生成图片</button>
 
   <script src="html2canvas.min.js"></script>
   <script src="jquery.min.js"></script>
